## Copyright 2014-2015 Mo McRoberts
##
##  Licensed under the terms of the Creative Commons Attribution 4.0
##  International license. You may not use this file except in compliance
##  with the license. You can find an overview of the license terms, as
##  well as a link to the full legal text, at:
##
##      https://creativecommons.org/licenses/by/4.0/
##

AC_INIT([jyuzau-assets],[develop],)
AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE

AC_CONFIG_FILES([
Makefile
actors/Makefile
props/Makefile
scenes/Makefile
music/Makefile
music/weiyu/Makefile
fonts/Makefile
story/Makefile
concepts/Makefile
concepts/actors/Makefile
concepts/factions/Makefile
concepts/factions/æsir/Makefile
concepts/factions/aten/Makefile
concepts/factions/bacab/Makefile
concepts/factions/bhārat-gaṇarājya/Makefile
concepts/factions/estados-unidos-mexicanos/Makefile
concepts/factions/uaf/Makefile
concepts/factions/zhonghua-minzu/Makefile
concepts/factions/zhonghua-minzu/lingshan/Makefile
concepts/factions/zhonghua-minzu/lingshan/weiyu/Makefile
concepts/players/Makefile
concepts/players/lin-chao/Makefile
])

AC_OUTPUT
