## Copyright 2014-2015 Mo McRoberts
##
##  Licensed under the terms of the Creative Commons Attribution 4.0
##  International license. You may not use this file except in compliance
##  with the license. You can find an overview of the license terms, as
##  well as a link to the full legal text, at:
##
##      https://creativecommons.org/licenses/by/4.0/
##

SUBDIRS = lin-chao
